# Creditcoin-Processor-Rust

./: Cargo.toml  justfile
.github/workflows/: ci.yml
descriptors/: AddAskOrder  AddAskOrder.cctest  AddBidOrder  AddBidOrder.cctest  AddDealOrder  AddDealOrder.cctest  AddOffer  AddOffer.cctest  AddRepaymentOrder  AddRepaymentOrder.cctest  CloseDealOrder  CloseDealOrder.cctest  CloseRepaymentOrder  CloseRepaymentOrder.cctest  CompleteDealOrder  CompleteDealOrder.cctest  CompleteRepaymentOrder  CompleteRepaymentOrder.cctest  Exempt  Exempt.cctest  LockDealOrder  LockDealOrder.cctest  RegisterAddress  RegisterAddress.cctest  RegisterTransfer  RegisterTransfer.cctest  SendFunds  SendFunds.cctest
src/: ext.rs  handler.rs  lib.rs  main.rs  test_utils.rs
src/handler/: constants.rs  context.rs  tests.rs  types.rs  utils.rs
src/handler/tests/: execution.rs
src/handler/tests/execution/: add_ask_order.rs  add_bid_order.rs  add_deal_order.rs  add_offer.rs  add_repayment_order.rs  close_deal_order.rs  close_repayment_order.rs  complete_deal_order.rs  complete_repayment_order.rs  exempt.rs  lock_deal_order.rs  register_address.rs  register_transfer.rs  send_funds.rs
tests/: add_ask_order.rs  add_bid_order.rs  add_deal_order.rs  add_offer.rs  add_repayment_order.rs  close_deal_order.rs  close_repayment_order.rs  complete_deal_order.rs  complete_repayment_order.rs  exempt.rs  lib.rs  lock_deal_order.rs  register_address.rs  register_transfer.rs  send_funds.rs
tests/common/: mod.rs
tests/integration/: add_ask_order.rs  add_bid_order.rs  add_deal_order.rs  add_offer.rs  add_repayment_order.rs  close_deal_order.rs  close_repayment_order.rs  common.rs  complete_deal_order.rs  complete_repayment_order.rs  exempt.rs  lock_deal_order.rs  main.rs  register_address.rs  register_transfer.rs  send_funds.rs
