[package]
name = "ccprocessor-rust"
version = "0.1.0"
authors = ["Nathan Whitaker <nathan.whitaker01@gmail.com>", "Gluwa Inc."]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
clap = "2.33.3"
derive_more = "0.99.13"
enum_dispatch = "0.3.6"
fern = { version = "0.6.0", features = ["colored"] }
hex = "0.4.3"
log = "0.4.14"
once_cell = "1.7.2"
prost = "0.8.0"
openssl = "0.10.35"
rand = "0.8.3"
rug = { version = "1.12.0", features = [
    "integer",
    "gmp-mpfr-sys",
], default-features = false }
sawtooth-sdk = { package = "sawtooth-sdk-creditcoin", git = "https://github.com/nathanwhit/sawtooth-sdk-rust", branch = "main" }
serde_cbor = "0.11.1"
sha2 = "0.9.5"
zmq = "0.9.2"
paste = "1.0.5"
serde = { version = "1.0.126", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.40"
glob = "0.3.0"
prost-build = "0.8.0"

[dev-dependencies]
base64 = "0.13.0"
bollard = "0.11.0"
dirs = { package = "dirs-next", version = "2.0.0" }
enclose = "1.1.8"
futures-lite = "1.12.0"
itertools = "0.10.1"
libsecp256k1 = "0.6.0"
old_rand = { package = "rand", version = "0.7" }
maplit = "1.0.2"
mockall = "0.10"
pollster = "0.2.4"
portpicker = "0.1.1"
protobuf = "2.24.1"
serde_json = "1.0.66"
test-env-log = { version = "0.2.7", default-features = false, features = [
    "log",
] }
tokio = { version = "1.9.0", features = ["rt", "macros", "net"] }
ureq = "2.1.1"
assert_matches = "1.5.0"
pretty_assertions = "0.7.2"

[features]
default = ["vendored", "mock"]
nightly = ["mockall/nightly"]
vendored = ["zmq/vendored"]
old-sawtooth = ["sawtooth-sdk/old-sawtooth"]
mock = []
integration-testing = []
